Fix some small css things. Font weight more consistent between browsers (corrected for firefox) Improved some spacing on chrome (still needs work on firefox.) (It seems that margins are not as respected in FF as in Chrome in some scenarios) (parent box sizing when children have padding/margins and display of parent is "block" instead of "flex")

--- a/public_static/css/projects-list.scss
+++ b/public_static/css/projects-list.scss
@@ -102,7 +102,7 @@
 }
 
 #mini_projects {
-	margin-top: 1.5rem;
+	margin: 1.5rem 0;
 	gap: 1rem;
 }
 #mini_projects_content {
@@ -124,6 +124,7 @@
 	width: 16em;
 	border-radius: 0.5rem;
 	border: 1px solid var(--color-base);
+	background-color: var(--color-base-1);
 }
 
 // .category_content {
